--- a/app/src/main/res/layout/choose_your_match_item.xml
+++ b/app/src/main/res/layout/choose_your_match_item.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="8dp"
         android:layout_margin="8dp"
         app:cardCornerRadius="8dp">
 
@@ -48,6 +49,7 @@
                     android:id="@+id/tv_fullName"
                     android:fontFamily="sans-serif-black"
                     android:text="@string/name"
+                    android:textColor="@color/teal_700"
                     android:textAppearance="?attr/textAppearanceHeadline4"
                     android:textStyle="bold" />
 
@@ -134,10 +136,11 @@
 
                 <com.google.android.material.button.MaterialButton
                     style="?attr/borderlessButtonStyle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/btn_decline"
                     android:layout_alignParentStart="true"
+                    android:textSize="16sp"
                     android:textColor="#60706f"
                     app:iconTint="#60706f"
                     app:icon="@drawable/ic_decline"
@@ -145,11 +148,12 @@
 
                 <com.google.android.material.button.MaterialButton
                     style="?attr/borderlessButtonStyle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/btn_accept"
                     android:layout_alignParentEnd="true"
                     android:text="@string/accept"
+                    android:textSize="16sp"
                     app:iconTint="#51cb46"
                     android:textColor="#51cb46"
                     app:icon="@drawable/ic_tick_mark"/>
