--- a/app/src/main/res/layout/activity_choose_match.xml
+++ b/app/src/main/res/layout/activity_choose_match.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:padding="4dp"
+        android:padding="@dimen/layout_padding"
         tools:listitem="@layout/choose_your_match_item" />
 
     <ProgressBar
@@ -31,14 +31,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/layout_margin"
         android:gravity="center_horizontal"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Error message"
+        tools:text="@string/error"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
