--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="left_right_padding">16dp</dimen>
+    <dimen name="layout_margin_16dp">16dp</dimen>
     <dimen name="layout_padding">4dp</dimen>
     <dimen name="layout_padding_top">8dp</dimen>
     <dimen name="layout_margin">8dp</dimen>
